--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.+'
-    implementation 'com.android.support:customtabs:26.+'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:customtabs:26.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:design:26.1.0'
@@ -35,16 +35,20 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation "com.google.android.gms:play-services-location:11.8.0"
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+
     implementation 'net.sourceforge.jtds:jtds:1.3.1'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:5.2.0@aar') {
+   /* implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:5.2.0@aar') {
         transitive=true
-    }
+    }*/
 
     // implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.2.0'
+
     implementation 'com.android.volley:volley:1.0.0'
 
     testImplementation 'junit:junit:4.12'
