--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,36 +23,36 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.akexorcist:googledirectionlibrary:1.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
-    implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
-    implementation "com.google.android.gms:play-services-location:11.8.0"
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
-
     implementation 'net.sourceforge.jtds:jtds:1.3.1'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-   /* implementation('com.mapbox.mapboxsdk:mapbox-android-sdk:5.2.0@aar') {
-        transitive=true
-    }*/
 
-    // implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.2.0'
+    implementation 'com.github.johnpersano:supertoasts:1.3.4@aar'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.androidanimations:library:1.1.2@aar'
+    //implementation 'com.daimajia.easing:library:1.0.0@aar'
+    implementation 'jp.wasabeef:recyclerview-animators:1.0.3@aar'
 
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.android.volley:volley:1.0.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation project(':library')
 }
