--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.ahmedghassen.socialwifi"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
+    //implementation 'com.github.johnpersano:supertoasts:2.0'
     implementation 'com.github.johnpersano:supertoasts:1.3.4@aar'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.androidanimations:library:1.1.2@aar'
