--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.android.volley:volley:1.0.0'
+
+    implementation 'com.facebook.android:facebook-share:4.28.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
